[package]
name = "discord-texas-holdem"
version = "0.1.0"
authors = ["Aurora <programming.aurora@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serenity = { version = "0.10.4", features = ["collector"] }
tokio = { version = "1.4", features = ["full"] }
futures = "0.3.13"

